// Original file: src/proto/project.proto


export interface Project {
  'id'?: (string);
  'name'?: (string);
  'status'?: (boolean);
  'idUser'?: (string);
  'isDefault'?: (boolean);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'deletedAt'?: (string);
}

export interface Project__Output {
  'id'?: (string);
  'name'?: (string);
  'status'?: (boolean);
  'idUser'?: (string);
  'isDefault'?: (boolean);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'deletedAt'?: (string);
}
