// Original file: src/proto/project.proto


export interface ProjectFindAll {
  'id'?: (string);
  'name'?: (string);
  'status'?: (boolean);
  'idUser'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'deletedAt'?: (string);
}

export interface ProjectFindAll__Output {
  'id'?: (string);
  'name'?: (string);
  'status'?: (boolean);
  'idUser'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'deletedAt'?: (string);
}
